# GeoCoordinateEditors

./: CMakeLists.txt
geocoordinateeditors/: CMakeLists.txt
geocoordinateeditors/include/: degreecoordinateeditor.h  format.h  geocoordinate.h
geocoordinateeditors/include/Geo/: Coordinate.hpp
geocoordinateeditors/src/: AbstractFormat.hpp  Format_DD.hpp  Format_DDMMSS.hpp  PointEdit.cpp  degreecoordinateeditor.cpp  format.cpp  geocoordinate.cpp
include/Geo/: Format.hpp  LineringEdit.hpp  PointEdit.hpp
src/: Coordinate.cpp  CoordinateVectorEdit.cpp  DegreeCoordinateEdit.cpp  DegreeCoordinateEdit.hpp  Format_DD.cpp  Format_DDMM.cpp  Format_DDMMSS.cpp  LatitudeEdit.cpp  LineringEdit.cpp  LongitudeEdit.cpp  LongitudeEdit.hpp
src/include/Geo/: CircleEdit.hpp
src/src/: AbstractFormat.cpp  CircleEdit.cpp  CoordinateVectorEdit.hpp  Format_DDMM.hpp  LatitudeEdit.hpp
test/: CMakeLists.txt  main.cpp
